Push comic site

--- a/comic2.html
+++ b/comic2.html
@@ -11,7 +11,7 @@
         <a href="comic2.html">Next</a>
     </div>
     <h1>Comic 2</h1>
-    <img src="../comics/daft18.png" alt="Comic 2">
+    <img src="comics/daft18.png" alt="Comic 2">
     <p>This is comic 2!</p>
 </body>
 </html>
