Push comic site

--- a/comic1.html
+++ b/comic1.html
@@ -11,7 +11,7 @@
         <a href="comic2.html">Next</a>
     </div>
     <h1>Comic 1</h1>
-    <img src="../comics/daft16.png" alt="Comic 1">
+    <img src="daft16.png" alt="Comic 1">
     <p>This is comic 1!</p>
 </body>
 </html>
