--- a/comic1.html
+++ b/comic1.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Comic 1</title>
+    <title>Cathedral</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+        .nav button {
+            background: #444;
+            color: white;
+            padding: 10px 18px;
+            border: none;
+            border-radius: 6px;
+            margin: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        .nav button:hover {
+            background: #666;
+        }
+    </style>
 </head>
 <body>
     <div class="nav">
-        <a href="comic1.html">Previous</a> |
-        <a href="index.html">Latest</a> |
-        <a href="comic2.html">Next</a>
+        <button onclick="window.location.href='comic1.html'">Previous</button>
+        <button onclick="window.location.href='index.html'">Latest</button>
+        <button onclick="window.location.href='comic2.html'">Next</button>
+        <button onclick="window.location.href='comic' + Math.floor(Math.random() * 3 + 1) + '.html'">Random</button>
     </div>
-    <h1>Comic 1</h1>
-    <img src="daft16.png" alt="Comic 1">
-    <p>This is comic 1!</p>
+
+    <h1>Cathedral</h1>
+
+    <img src="Cathedral.png" alt="Cathedral">
+    <p></p>
 </body>
 </html>
